将翻译结果文本框设置为只读

--- a/Web/wwwroot/index.html
+++ b/Web/wwwroot/index.html
@@ -41,7 +41,7 @@
                     <label class="control-label">翻译结果</label>
                     <div class="controls">
                         <div class="textarea">
-                            <textarea type="" class="" style="width:100%" id="result"> </textarea>
+                            <textarea type="" class="" style="width:100%" id="result" readonly="readonly"> </textarea>
                         </div>
                     </div>
                 </div>
